# Prism

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  deploy.yml  rust.yml
assets/: style.scss  sw.js
prism/: Cargo.toml
prism-core/: Cargo.toml
prism-core/src/: lib.rs
prism-core/src/math/: bounds.rs  mod.rs  ray.rs
prism-core/src/util/: image.rs
prism/src/: main.rs
src/: Application.cpp  Application.hpp  CMakeLists.txt  Ray.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanUtils.cpp  VulkanUtils.hpp  app.rs  lib.rs  main.cpp  main.rs  prism-rt.cpp
src/executables/: CMakeLists.txt  prism-rt.cpp
src/math/: CMakeLists.txt  Float.hpp  Functions.hpp  Point2.cpp  Point2.hpp  Point3.cpp  Point3.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
src/prism-rt/: CMakeLists.txt  main.cpp
src/raytracing/: CMakeLists.txt  Ray.cpp
src/raytracing/shapes/: Sphere.cpp  Sphere.hpp
src/samplers/: Sampler.cpp  Sampler.hpp
src/shapes/: Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp
src/ui/: about_window.rs  central_panel.rs  frame_time_widget.rs  mod.rs  top_panel.rs
src/utils/: CMakeLists.txt  Swappable.cpp  Swappable.hpp
tests/math/: CMakeLists.txt  Point2_tests.cpp  Point3_tests.cpp  Vector2_tests.cpp  Vector3_tests.cpp
tests/utils/: CMakeLists.txt  Swappable_tests.cpp
third-parties/: CMakeLists.txt
third-parties/stb_image_write/: CMakeLists.txt  stb_image_write.cpp
