[package]
name = "prism"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Mikayex/Prism"
authors = ["Thomas Laroche"]

[dependencies]
egui = "0.26"
eframe = { version = "0.26", default-features = false, features = ["default_fonts", "persistence", "wgpu"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
wgpu = { version = "*", features = ["dx12", "metal", "wgsl", "webgpu"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
